# vox2

./: .gitignore  LICENSE  Makefile  README.md  install.sh  prompt.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
debian/: changelog  control
tests/: test_api.py  test_history.py  test_security.py
vox/: __init__.py  __main__.py  api.py  cli.py  clipboard.py  executor.py  history.py  security.py  tui.py  utils.py  vox.tcss
